Fixed home transition jump

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,6 +1,6 @@
-.main-container {
+.home-container {
   position: relative;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: scroll;
 }
