--- a/styles/productpage.scss
+++ b/styles/productpage.scss
@@ -1,7 +1,8 @@
 .page-container-outer {
   position: absolute;
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
